[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clearspark"
version = "0.1.0"
description = "A curated collection of essential PySpark functions for daily data engineering."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["pyspark", "data-engineering", "dataframe", "etl", "spark-utils", "bucketing", "categorization"]
authors = [
    {name = "Vinicius", email = "vinnyuniverso3@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyspark>=3.5.0",
    "pydantic>=2.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[project.urls]
Repository = "https://github.com/v-skolder/clearspark"
owner = "https://github.com/v-skolder"

[tool.hatch.build.targets.sdist]
include = ["/src"]

[tool.hatch.build.targets.wheel]
packages = ["src/clearspark"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]